<resources>
    <string name="app_name">Noah</string>
    <string name="title_community">커뮤니티</string>
    <string name="title_what_to_do">조치 사항</string>
    <string name="title_my_profile">내 정보</string>
    <string name="title_write">글쓰기</string>
    <string name="title_set_address">주소지 변경</string>
    <string name="title_map">지도</string>
    <string name="title_notifications">알림</string>
    <string name="kakao_app_key">47939324fbf96f947b79074c122ed360</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--조치사항-->
    <string name="what_to_do_earthquake_title1">지진, 평소에 이렇게 대비합니다.</string>
    <string name="what_to_do_earthquake_contents1">1. 튼튼한 탁자 아래에 들어가 몸을 보호합니다.\n
• 지진으로 크게 흔들리는 시간은 길어야 1~2분 정도입니다.\n
• 튼튼한 탁자의 아래로 들어가 탁자 다리를 꼭 잡고 몸을 보호합니다.\n
• 탁자 아래와 같이 피할 곳이 없을 때에는 방석 등으로 머리를 보호합니다.\n\n

2. 가스와 전깃불을 차단하고 문을 열어 출구를 확보합니다.\n
• 흔들림이 멈춘 후 당황하지 말고 화재에 대비하여 가스와 전깃불을 끕니다.\n
• 문이나 창문을 열어 언제든 대피할 수 있도록 출구를 확보합니다.\n
• 흔들림이 멈추면, 출구를 통해 밖으로 나갑니다.\n\n

3. 집에서 나갈 때는 신발은 꼭 신고 이동합니다.\n
• 지진이 발생하면 유리 조각이나 떨어져 있는 물체 때문에 발을 다칠 수 있으니, 발을 보호할 수 있는 신발을 신고 이동합니다.\n\n

4. 계단을 이용하여 밖으로 대피합니다.\n
• 지진이 나면 엘리베이터가 멈출 수 있으므로 타지 말고, 계단을 이용하여 건물 밖으로 대피합니다.\n
• 밖으로 나갈 때에는 떨어지는 유리, 간판, 기와 등에 주의하며, 소지품으로 몸을 보호하면서 침착하게 대피합니다.\n\n

5. 건물이나 담장으로부터 떨어져 이동합니다.\n
• 건물 밖으로 나오면 담장, 유리창 등이 파손되어 다칠 수 있으니, 건물과 담장에서 최대한 멀리 떨어져 가방이나 손으로 머리를 보호하면서 대피합니다.\n\n

6. 낙하물이 없는 넓은 공간으로 대피합니다.\n
• 떨어지는 물건에 주의하며 신속하게 운동장이나 공원 등 넓은 공간으로 대피합니다.\n
• 이동할 때에는 차량을 이용하지 않고 걸어서 대피합니다\n\n

7. 올바른 정보에 따라 행동합니다.\n
• 대피 장소에서는 안내에 따라 질서를 지킵니다.\n
• 지진 발생 직후에는 근거 없는 소문이나 유언비어가 유포될 수 있으니, 라디오나 공공기관의 안내 방송 등이 제공하는 정보에 따라 행동합니다.</string>
    <string name="what_to_do_earthquake_title2">장소에 따라 이렇게 행동합니다.</string>
    <string name="what_to_to_earthquake_contents2">1. 집에 있을 때\n
• 가구, 텔레비전 등 낙하물을 피해 탁자 아래로 들어가 탁자 다리를 꼭 잡고 머리와 몸을 보호합니다.\n
• 주방에서는 가스를 차단하여 화재발생에 주의합니다.\n
• 욕실에서는 몸을 낮추고 목욕대야, 수건, 목욕가운 등으로 머리와 몸을 보호합니다.\n\n

2. 학교에 있을 때\n
• 책상 아래로 들어가 몸을 웅크리고 책상다리를 꼭 잡고 몸을 보호합니다.\n
• 흔들림이 멈추면 선생님의 안내에 따라 질서를 지키면서 운동장으로 대피합니다.\n
• 복도에서는 창문 유리가 깨질 우려가 있으니 창문과 떨어져 이동합니다.\n\n

3. 고층 건물에 있을 때\n
• 높은 층의 건물일수록 흔들림이 크게 오래 지속될 수 있으므로 실내에서 떨어지는 물건에 더욱 주의하여야 합니다.\n\n

4. 사무실에 있을 때\n
• 사무실은 컴퓨터 본체, 모니터 등 무거운 물건들이 많아 다칠 위험이 큽니다.\n
• 사무실 책상 아래로 들어가 몸을 웅크리고 책상다리를 꼭 잡고 몸을 보호합니다.\n\n

5. 백화점‧마트에 있을 때\n
• 진열장에서 떨어지는 물건으로부터 몸을 보호합니다.\n
• 계단이나 기둥 근처로 피하고, 흔들림이 멈추면 안내에 따라 밖으로 대피합니다.\n
• 에스컬레이터를 타고 있다면, 손잡이를 잡고 앉아서 버틴 후 침착히 벗어납니다.\n\n

6. 극장‧경기장에 있을 때\n
• 흔들림이 멈출 때까지 가방 등 소지품으로 몸을 보호하면서 잠시 동안 자리에 머물러 있습니다.\n
• 사람이 많이 있는 곳에서는 한 곳으로 갑자기 몰리게 되면 사고의 우려가 있으니, 안내에 따라 대피합니다.\n\n

7. 엘리베이터를 타고 있을 때\n
• 지진이 발생하면 엘리베이터를 타지 말아야 합니다.\n
• 엘리베이터를 타고 있다면 모든 층의 버튼을 눌러 가장 먼저 열리는 층에서 신속하게 내린 후, 계단을 이용하여 대피합니다.\n
• 만약 엘리베이터 안에 갇혔을 때는 인터폰이나 휴대전화를 이용하여 구조를 요청합니다.\n\n

8. 자동차를 타고 있을 때\n
• 비상등을 켜고 서서히 속도를 줄여 도로 오른쪽에 차를 세우고 긴급차량을 위해 도로의 중앙부분을 비워둡니다.\n
• 라디오의 정보를 잘 듣고, 대피해야 할 때에는 열쇠를 꽂거나 놓아둔 채 문을 잠그지 않고 이동합니다.\n\n

9. 전철을 타고 있을 때\n
• 전철 안의 손잡이나 기둥, 선반을 꼭 잡고 넘어지지 않도록 합니다.\n
• 전철이 멈췄다고 해서 서둘러 출구로 뛰어가는 것은 위험하므로 안내에 따라 행동합니다.\n\n

10. 산이나 바다에 있을 때\n
• 돌‧바위가 굴러 내려오거나 큰 산사태가 발생할 수 있으므로, 급한 경사지를 피해 평탄한 곳으로 대피합니다.\n
• 지진해일 특보가 발령되면 지진해일 긴급대피장소 등 높은 신속하게 곳으로 대피합니다.</string>

    <string name="what_to_do_emergency_title1">비상시 정부 대응</string>
    <string name="what_to_do_emergency_contents1">•국가비상사태 적 공격이 예상되거나 시작되면 국가비상사태를 선포하여 민ㆍ관ㆍ군이 힘을 합쳐 대응합니다.\n
•국가동원령 인력ㆍ물자ㆍ장비 등을 동원하는 국가동원령을 선포하여 국가 위기극복을 지원합니다.\n
•생필품 배급 유사시 국민생활 안정시키는 생활필수품을 유통·관리하고 필요시 배급제를 실시합니다.</string>
    <string name="what_to_do_emergency_title2">비상시 행동요령</string>
    <string name="what_to_do_emergency_contents2">비상사태 발생시 국민행동요령 3가지\n
•비상대비 생필품 구비\n
•불필요한 전화 사용자제\n
•집안에서 안내방송 청취\n
※ 즉시 가정으로 복귀하되, 동원하는 중점관리대상업체 직원들은 직장으로 복귀합니다\n\n
•국가기관의 운행 차량을 제외하고는 모든 자동차의 개인차량 운행이 통제되므로 대중교통 수단을 이용합니다.\n
•단전·단수에 대비하여 손전등, 양초, 라이터(성냥)를 준비하고, 욕조나 큰 그릇에 물을 받아 두고 아껴 써야 합니다.\n
•집 밖으로 나오지 말고, TV·라디오·민방위 방송을 계속 들으면서 정부의 안내를 따라야 합니다.\n
•통화량 급증으로 통신망이 마비되지 않도록 불필요한 전화 사용은 자제합니다.\n</string>

    <string name="what_to_do_article_title1">일상에서 준비할수록 안전</string>
    <string name="what_to_do_article_contents1">•평상시에 가정에서 구비할 수 있는 생활필수품과 비상사태에 대비하여 상비약품, 그리고 화생방 대비용품을 마련해야 합니다. 또한, 주기적으로 물자의 유통기한을 확인하고 교체하여 관리해야 합니다.
</string>
    <string name="what_to_do_article_title2">비상대비물자</string>
    <string name="what_to_do_article_contents2">•비상용 생활필수품\n
- 식량·식수 : 가급적 조리와 보관이 간편한 쌀,라면, 밀가루, 통조림 등(30일분)\n
- 취사도구 : 식기(코펠), 버너 및 부탄가스(15개 이상)\n
- 침구 및 의류 : 담요, 내의 등\n
- 라디오(건전지 포함), 배낭, 휴대용 전등, 양초, 성냥 등\n\n
•가정용 상비약품\n
-의약품 : 소독제, 해열진통제, 소화제, 지사제, 화상연고, 지혈제, 소염제 등\n
-의약 외품 : 핀셋, 가위, 붕대, 탈지면,반창고, 삼각건 등\n\n
•화생방 대비물품\n
- 방독면 또는 수건, 마스크\n
- 보호 옷 또는 비닐 옷, 비옷\n
- 방독장화와 장갑 또는 고무장화와 장갑\n
- 비누, 합성세제 등을 활용 피부 세척\n
- 충분한 접착테이프 (창틀, 문틀 밀폐용)\n
</string>
    <string name="what_to_do_article_title3">비상대비 물자 준비요령</string>
    <string name="what_to_do_article_contents3">•음식물은 가급적 조리가 필요 없고 통조림으로 되어 있는 식품을 선택하고, 정기적으로 유통기간을 확인하여 교체해 주어야 합니다.\n
•라디오의 건전지는 충분히 준비해 두어야 합니다.
한 사람당 최소한 한 벌씩 추위를 막을 수 있는 따뜻한 옷과 신발을 준비해 둡니다.\n
•의약품은 가족 구성원의 특성을 고려 어린이나 노약자에 맞는 약품을 추가적으로 준비합니다.
환자가 있다면 최근 처방전 및 의약품을 준비합니다.\n
•대피시에는 통장, 보험증서, 계약서, 여권 등 중요서류도 함께 챙겨 가야 합니다.\n
•화생방 대비물품을 준비하되, 구비하지 않았다면 가정에서 쉽게 구할 수 있는 화생방 대체장비 물자(43page)를 활용합니다.\n
•평상시에는 비상대비물자를 휴대·이동이 쉽도록 배낭, 캐리어 등에 보관하고, 유통기한이 있는 품목은 정기적으로 사용·순환 교체하여 관리합니다.</string>

</resources>