<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.noah.ui.home.HomeFragment"
        android:label="@string/title_community"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.example.noah.ui.dashboard.DashboardFragment"
        android:label="@string/title_map"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.example.noah.ui.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />
    <fragment
        android:id="@+id/navigation_boardWrite"
        android:name="com.example.noah.ui.home.BoardWrite"
        android:label="@string/title_write"
        tools:layout="@layout/fragment_board_write" />
    <fragment
        android:id="@+id/navigation_whatToDo"
        android:name="com.example.noah.ui.home.WhatToDo"
        android:label="@string/title_what_to_do"
        tools:layout="@layout/fragment_what_to_do" />
    <activity
        android:id="@+id/navigation_my_profile"
        android:name="com.example.noah.MyProfile"
        android:label="@string/title_my_profile"
        tools:layout="@layout/activity_my_profile" />
    <fragment
        android:id="@+id/navigation_comment"
        android:name="com.example.noah.ui.home.Comment"
        android:label="@string/title_community"
        tools:layout="@layout/fragment_comment" />


</navigation>